# modal-bug-repro

./: README.md  pyproject.toml
backend/: api.py  common.py
backend/api_app/: __init__.py  api_app.py
backend/worker/: __init__.py  important_function.py
